﻿2014-07-11 Version 0.13.1 by BuZz
- moved low language string ids to avoid conflicts
- remove old commented out / unused code

2014-05-07 Version 0.13.0 by BuZz
- Removed debug logging and use xbmc.log
- treat "None" as "0" for version chec

2014-05-06 Version 0.12.2 by BuZz
- Brain glitch - Broken file time checking code

2014-05-06 Version 0.12.1 by BuZz
- Handle addon dependencies for locally installed addons from .zip

2014-05-06 Version 0.12.0 by BuZz
- Use Frodo Repository
- Support recursive dependencies
- Better dependency versioning support
- 30 min per repo addons.xml cache
- Reduced logging
- Many bugfixes
- Fixed parsing of unnofficial addon repositories from wiki

2013-02-11 Version 0.10.0 by BuZz
- Added new addons4xbox repository
- Cleanups and less verbosity
- Fix up installing of dependant addons (not recursive yet)
- Other misc bug fixes and improvements

2012-03-13 Version 0.9.3 by Temhil
- Added alternative source for repositories list and selection of the source in the plugin settings

2011-08-21 Version 0.9.2 by Temhil
- Fixed extractor creating too short subdirectorie names: 
  only the name of the root directory (i.e anarchintosh-projects repository) will be shorten, not the subdirs names

2011-08-20 Version 0.9.1 by Temhil
- Fixed anarchintosh-projects repository install (patch by exobuzz)
- Install automatically required addons, if install fails let the user to chose between keep going
  and install it manually or cancel the install
  Note: this does not apply to addons installed from zip
- Added 'Manage installed Addons' options, this for example provide a way to list the required addons on which install failed
- Fixed on parsing wiki page of unofficial addons when an addons does not have a link to the zip file, now we ignore it

2011-07-06 Version 0.9 by Temhil
- Refactored code in order to improve loading performances
- Added Unofficial Add-on Repositories install from XBMC Wiki page
- Fixed some encoding issues
