@@ -1,28 +1,9 @@
 
 
-import os
 import sys
-import xbmc
-import xbmcplugin
-import xbmcgui
 from traceback import print_exc
 
-__script__       = sys.modules[ "__main__" ].__script__
-__plugin__       = sys.modules[ "__main__" ].__plugin__
-__author__       = sys.modules[ "__main__" ].__author__
-__url__          = sys.modules[ "__main__" ].__url__
-__svn_url__      = sys.modules[ "__main__" ].__svn_url__
-__credits__      = sys.modules[ "__main__" ].__credits__
-__platform__     = sys.modules[ "__main__" ].__platform__
-__date__         = sys.modules[ "__main__" ].__date__
-__version__      = sys.modules[ "__main__" ].__version__
-__svn_revision__ = sys.modules[ "__main__" ].__svn_revision__
-__XBMC_Revision__= sys.modules[ "__main__" ].__XBMC_Revision__
 __language__     = sys.modules[ "__main__" ].__language__
-ROOTDIR            = sys.modules[ "__main__" ].ROOTDIR
-BASE_RESOURCE_PATH = sys.modules[ "__main__" ].BASE_RESOURCE_PATH
-LIBS_PATH          = sys.modules[ "__main__" ].LIBS_PATH
-MEDIA_PATH         = sys.modules[ "__main__" ].MEDIA_PATH
 
 
 # Custom modules
